Fix .orientation-portrait.editor-collapsed #review-pane { bottom }

--- a/style.css
+++ b/style.css
@@ -221,8 +221,11 @@ body {
   position: relative;
 }
 
-:root.editor-collapsed :has(>#review) {
+:root:not(.orientation-portrait).editor-collapsed #review-pane {
   left: 0 !important;
+}
+:root.orientation-portrait.editor-collapsed #review-pane {
+  bottom: 0 !important;
 }
 
 #options {
